--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@ wheels/
 data/downloads
 dir/
 TEST_STATUS_SUMMARY.md
-TEST_SUMMARY.md
+TESTING_SUMMARY.md
 TEST_FIXES_NEEDED.md
 DOCUMENT_SOURCES.md 
 FEATURE_SUMMARY.md
