--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,7 @@ name: CI/CD Pipeline
 
 on:
   push:
-    branches: [ main, dev, feature/* ]
+    branches: [ main, dev]
   pull_request:
     branches: [ main, dev ]
 
