--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,21 +46,21 @@ jobs:
 
     - name: Run unit tests
       run: |
-        uv run pytest tests/unit -v --tb=short -m unit
+        uv run python -m pytest tests/unit -v --tb=short -m unit
       env:
         OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
         TAVILY_API_KEY: ${{ secrets.TAVILY_API_KEY }}
 
     - name: Run integration tests (excluding slow tests)
       run: |
-        uv run pytest tests/integration -v --tb=short -m "integration and not slow"
+        uv run python -m pytest tests/integration -v --tb=short -m "integration and not slow"
       env:
         OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
         TAVILY_API_KEY: ${{ secrets.TAVILY_API_KEY }}
 
     - name: Run all tests with coverage
       run: |
-        uv run pytest tests/ -v --cov=src --cov-report=xml --cov-report=html --cov-report=term
+        uv run python -m pytest tests/ -v --cov=src --cov-report=xml --cov-report=html --cov-report=term
       env:
         OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
         TAVILY_API_KEY: ${{ secrets.TAVILY_API_KEY }}
